Fixing multiple scrollbars in Firefox
Former-commit-id: d57024e89356f2f8184d7349c1a215670a5e23c2 [formerly c472d48dbe331656d52212384579ec5b2dae0165]
Former-commit-id: d57024e89356f2f8184d7349c1a215670a5e23c2
Former-commit-id: b6b8b40f3e7f084524bec953628f8c616a3b76fd

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -125,6 +125,19 @@ nav.ui.top.secondary.menu{
 
 }
 
+.sixteen.wide.mobile.fifteen.wide.tablet.twelve.wide.computer.column.post-list{
+  max-height: unset !important;
+  height: auto !important;
+  padding-right: 2em;
+  overflow-y: hidden;
+}
+
+.sixteen.wide.mobile.fifteen.wide.tablet.eleven.wide.computer.column.post-list{
+  max-height: unset !important; 
+  height: auto !important;
+  overflow-y: hidden;
+}
+
 #sharing {
     float: right;    
 }
@@ -215,10 +228,6 @@ article.post-content pre>code {
 
 .ui.secondary.segment{
   background-color: #ececece8;
-}
-
-::-webkit-scrollbar{
-  display:none;
 }
 
 div#toc{
